increased zindex on header to prevent diappearing behind hero section

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,7 @@
 .fixed-header {
   position: fixed;
   width: 100%;
+  z-index: 100;
 }
 
 .social-header {
